test/2/parse/num-literal-double-dot.err
test/2/parse/num-literal-double-dot.ploy:1:1-4: parse error: unexpected token: flt.
| 0.0.0
  ~~~
